fixed layout of buttons when viewing on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -12,11 +12,15 @@ h2 {
     color: white;
 }
 
+main {
+    margin-bottom: 1.50rem;
+}
+
 #calculator-container {
     display: inline-block;
     background-color: white;
     width: 320px;
-    height: 372px;
+    height: 367px;
 }
 
 #text-area, #footer, h2 {
@@ -37,7 +41,7 @@ h2 {
     background: rgb(255 229 229 / 18%);
     border: 1px solid rgba(196, 190, 190, 0.200);
     width: 80px;
-    height: 74px;
+    height: 73px;
 }
 
 .operator {
@@ -51,15 +55,12 @@ h2 {
 }
 
 #footer {
-    margin-top: 1.25rem;
     font-size: 1.25rem;
     color: white;
 }
 
 @media (max-width: 570px) {
-
-    #footer {
-        margin-top: 3rem;
+    main {
+        margin-bottom: 6rem;
     }
-
 }
